--- a/6-websockets/views/partials/table.ejs
+++ b/6-websockets/views/partials/table.ejs
@@ -1,4 +1,4 @@
-
+<% document.getElementById('tabla').append( %>
 <% socket.on('productos', productos => { %>
       <div>
             <hr>
@@ -27,5 +27,8 @@
       </div>
 <%})%>
       
+
+<% ) %>
+
 
 
