--- a/6-websockets/public/styles.css
+++ b/6-websockets/public/styles.css
@@ -17,6 +17,7 @@
       background-color: white;
       height: 100px;
       border-radius: 5px;
+      overflow: scroll;
 }
 .chat{
       border-radius: 10px;
