desafío entregable clase 20

--- a/6-websockets/public/templates/tablaProductos.hbs
+++ b/6-websockets/public/templates/tablaProductos.hbs
@@ -2,7 +2,7 @@
         {{#each data}}
         <tr id="{{this.id}}">
             <td>{{this.nombre}}</td>
-            <td>${{this.precio}}</td>
+            <td>{{this.precio}}</td>
             <td><img width="50" src={{this.foto}} alt="not found"></td>
         </tr>
         {{/each}}
