--- a/6-websockets/public/css/styles.css
+++ b/6-websockets/public/css/styles.css
@@ -13,6 +13,13 @@
       width: 90% !important;
       margin: auto;
 }
+.containerMensajes{
+      background-color: rgb(135, 195, 241);
+      border-radius: 10px;
+      margin: 50px;
+      padding: 40px !important;
+      width: 50%
+}
 .mensajes {
       background-color: white;
       height: 100px;
@@ -23,6 +30,6 @@
       border-radius: 10px;
 }
 .chat-form{
-      width: 50%;
+      width: 100%;
       margin: auto
 }
