--- a/6-websockets/views/partials/navLogged.ejs
+++ b/6-websockets/views/partials/navLogged.ejs
@@ -1,4 +1,4 @@
 <div class="navbar">
-      <h3>Bienvenido <%= username %></h3>
+      <h3>Bienvenido, <h3 id="username"><%= username %></h3></h3>
       <a href="http://localhost:8080/logout">Desloguearse</a>
 </div>
