--- a/6-websockets/src/views/partials/chat.ejs
+++ b/6-websockets/src/views/partials/chat.ejs
@@ -10,3 +10,5 @@
             </form>
       </div>
 </div>
+<script src="../../../public/js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.2/index.d.ts"></script>
