--- a/6-websockets/src/views/partials/navLogout.ejs
+++ b/6-websockets/src/views/partials/navLogout.ejs
@@ -1,6 +1,4 @@
-
-
 <div class="navbar">
-      <h3>Hasta luego, <%= username %></h3>
+      <h3>Hasta luego, <%= email %></h3>
       <a href="http://localhost:8080/">Login</button></a>
 </div>
