--- a/6-websockets/public/css/styles.css
+++ b/6-websockets/public/css/styles.css
@@ -6,6 +6,26 @@
       border-radius: 10px;
       margin: 20px;
       padding: 40px !important;
+      position: unset!important;
+      display: block!important;
+      max-width: 500px;
+      margin: auto;
+      margin-top: 2rem;
+}
+.navbar-error{
+      background-color: rosybrown;
+      border-radius: 10px;
+      margin: 20px;
+      padding: 40px !important;
+      position: unset!important;
+      display: block!important;
+      max-width: 500px;
+      margin: auto;
+      margin-top: 2rem;
+}
+.btn-box{
+      display:flex;
+      justify-content: space-around;
 }
 .container{ 
       background-color: rgb(135, 195, 241);
@@ -38,11 +58,4 @@
 .chat-form{
       width: 100%;
       margin: auto
-}
-.container-login{
-      background-color: rgb(135, 195, 241);
-      border-radius: 10px;
-      margin: 50px;
-      padding: 40px !important;
-      width: 50%
 }
