--- a/6-websockets/src/views/partials/signup.ejs
+++ b/6-websockets/src/views/partials/signup.ejs
@@ -1,10 +1,10 @@
 
-<div class="navbar">
+<div class="container">
       <p>Complete los siguientes campos para registrarse</p>
       <form class="chat-form" action="/signup" method="post">
-            <input type="email" class="form-control" placeholder="email" name="email" required><br>
-            <input type="password" class="form-control" placeholder="password" name="password1" required><br>
-            <input type="password" class="form-control" placeholder="password again" name="password2" required><br>
+            <input type="text" class="form-control" placeholder="email" name="email" required><br>
+            <input type="password" class="form-control" placeholder="password" name="password" required><br>
+            <!-- <input type="password" class="form-control" placeholder="password again" name="password2"><br> -->
             <input type="submit" class="btn btn-success" value="Enviar" >
             <a class="btn btn-primary" href="/">Volver</a>
       </form>
