--- a/6-websockets/src/views/partials/navLogged.ejs
+++ b/6-websockets/src/views/partials/navLogged.ejs
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="container">
       <h3>Bienvenido, <h3 id="email"><%= email %></h3></h3>
       <a href="http://localhost:8080/logout">Desloguearse</a>
 </div>
