--- a/6-websockets/src/views/partials/navLogin.ejs
+++ b/6-websockets/src/views/partials/navLogin.ejs
@@ -1,21 +1,19 @@
-<div class="navbar">
+<div class="container">
     <p>Bienvenido/a. Ingrese con sus datos o regístrese</p>
-      <form action="http://localhost:8080/login" method="POST">
+      <form action="/login" method="POST">
             <div class="mb-3 row">
-                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                <label for="email" class="col-sm-2 col-form-label">Email</label>
 
-                        <input type="text" class="form-control" id="inputEmail" name="email" required>
+                        <input type="text" class="form-control" name="email" required/>
 
             </div>
             <div class="mb-3 row">
                 <label for="password" class="col-sm-2 col-form-label">Password</label>
 
-                        <input type="password" class="form-control" id="inputPassword" name="password" required>
+                        <input type="password" class="form-control" name="password" required/>
 
             </div>
-            <div class="btn-box">
-                <input class="btn btn-success" type="submit" value="Iniciar sesion">
-                <a href="http://localhost:8080/signup" class="btn btn-primary btn-signup">Registrarme</a>
-            </div>
+            <input class="btn btn-success" type="submit" value="Iniciar sesion"/>
+           <a href="http://localhost:8080/signup" class="btn btn-primary btn-signup">Registrarme</a>
     </form>
 </div>
