--- a/6-websockets/src/views/pages/info.ejs
+++ b/6-websockets/src/views/pages/info.ejs
@@ -4,14 +4,14 @@
       </head>
       <body>
             <div class="container">
-                  <p>argumentos de entrada: <%= argumentos %></p>
-                  <p>sistema operativo: <%= sistema %></p>
-                  <p>verison de node: <%= version %></p>
-                  <p>memoria utilizada: <%= memoria %></p>
-                  <p>path: <%= path %></p>
-                  <p>id del proceso: <%= id %></p>
-                  <p>directorio: <%= directorio %></p>
+                  <p>Argumentos de entrada: <%= argumentos %></p>
+                  <p>Sistema operativo: <%= sistema %></p>
+                  <p>Versión de node: <%= version %></p>
+                  <p>Memoria utilizada: <%= memoria %></p>
+                  <p>Path: <%= path %></p>
+                  <p>Id del proceso: <%= id %></p>
+                  <p>Directorio: <%= directorio %></p>
+                  <p>Número de CPUs: <%= nucleos %></p>
             </div>
-            
       </body>
 </html>
